[package]
name = "exact-panic"
version = "0.0.7"
description = "Panic messages for humans"
license = "MIT"
edition = "2018"

[features]
default = ["color"]
nightly = []
color = ["dep:termcolor", "dep:concolor"]

[dependencies]
termcolor = { version = "1.0.4", optional = true }
concolor = { version = "0.0.11", features = ["auto"], optional = true }
uuid = { version = "0.8.0", features = ["v4"], default-features = false }
serde_derive = "1.0.79"
toml = "0.5.0"
serde = "1.0.79"
os_info = "2.0.6"
backtrace = "0.3.9"
