[package]
name = "panic"
version = "0.3.1"
description = "Humanized panic message wrapper"
license = "MIT"
edition = "2021"
repository = "https://github.com/exact-labs/panic"

[features]
nightly = []
only-release = []
default = ["color", "only-release"]
color = ["dep:anstyle", "dep:anstream"]


[dependencies]
os_info = "3.6.0"
backtrace = "0.3.67"
text_placeholder = "0.5.0"
anstyle = { version = "1.0.0", optional = true }
anstream = { version = "0.6.7", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"], default-features = false }
toml = { version = "0.8.8", default-features = false, features = ["display"] }
